# C99-Win32-AtomToolset

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE-MIT  readme.md
rsc/rc/: app.rc
src/: errors.h  main.c
src/cli/: cli.c  cli.h
src/core/: constants.h  iterator.c  iterator.h  monitor.c  monitor.h  utils.c  utils.h
src/gui/: gui.c  gui.h  utils.c  utils.h
